--- a/src/main/res/layout/chat_date_divider.xml
+++ b/src/main/res/layout/chat_date_divider.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <View
         android:layout_width="match_parent"
@@ -9,7 +9,7 @@
         android:layout_centerInParent="true"
         android:background="@drawable/chat_date_line"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"/>
 
     <TextView
         android:id="@+id/tvChatDateDivider"
@@ -23,7 +23,12 @@
         android:shadowColor="@null"
         android:shadowRadius="0"
         android:shadowDy="0"
+        android:text="TEST"
         android:shadowDx="0"
-        android:padding="2dp" />
+        android:paddingTop="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingBottom="4dp"
+        />
 
 </RelativeLayout>
