--- a/src/main/res/menu/actions_chat.xml
+++ b/src/main/res/menu/actions_chat.xml
@@ -8,4 +8,9 @@
         android:title="@string/profile_actions"
         appcompat:actionLayout="@layout/actionbar_item_profile"
         appcompat:showAsAction="always" />
+    <item
+        android:id="@+id/action_user_actions_list"
+        android:icon="@drawable/user_profile_actions_button_selector"
+        android:title="@string/profile_actions"
+        appcompat:showAsAction="always" />
 </menu>
