--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -19,9 +19,9 @@
         android:fadeScrollbars="true"
         android:fadingEdge="none"
         android:listSelector="@android:color/transparent"
-        android:stackFromBottom="true"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
+        android:stackFromBottom="true"
         p2r:ptrHeaderTextColor="#8A8A8A"
         p2r:ptrMode="pullUpFromBottom"
         p2r:ptrOverScroll="false"
@@ -61,4 +61,12 @@
         android:singleLine="true"
         android:text="@string/general_dialog_loading"
         android:visibility="gone" />
+
+    <ViewStub
+        android:id="@+id/chat_actions_stub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp" />
 </com.topface.topface.ui.views.KeyboardListenerLayout>
