--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -6,7 +6,6 @@
     <dimen name="indicator_internal_padding">4dp</dimen>
 
     <dimen name="popular_dialog_text_margin">36dp</dimen>
-    <dimen name="action_bar_title_size">18sp</dimen>
 
     <!-- defaults for shadows -->
     <item name="shadow_1px" format="float" type="dimen">1</item>
@@ -15,5 +14,7 @@
     <item name="shadow_n2px" format="float" type="dimen">-2</item>
     <item name="shadow_3px" format="float" type="dimen">3</item>
     <item name="shadow_n3px" format="float" type="dimen">-3</item>
+    <!-- for chat -->
+    <dimen name="chat_balloon_max_width">270dp</dimen>
 
 </resources>
