--- a/src/main/res/values-land/dimens.xml
+++ b/src/main/res/values-land/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="popular_dialog_text_margin">12dp</dimen>
     <dimen name="action_bar_title_size">16sp</dimen>
 
+    <!-- for chat -->
+    <dimen name="chat_balloon_max_width">360dp</dimen>
+
 </resources>
