--- a/src/main/res/values-xxhdpi/dimens.xml
+++ b/src/main/res/values-xxhdpi/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="action_bar_title_size">20sp</dimen>
+    <dimen name="action_bar_subtitle_size">12sp</dimen>
+
     <item name="shadow_1px" format="float" type="dimen">3</item>
     <item name="shadow_n1px" format="float" type="dimen">-3</item>
     <item name="shadow_2px" format="float" type="dimen">6</item>
