--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -84,7 +84,7 @@
         <item name="android:windowActionBarOverlay" tools:ignore="NewApi">true</item>
     </style>
 
-    <style name="Theme.Topface.Chat" parent="Theme.Topface">
-        <item name="android:windowBackground">@color/bg_main</item>
+    <style name="Theme.Topface.Chat">
+        <item name="android:windowBackground">@color/bg_holo</item>
     </style>
 </resources>
