--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/titleContainer"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_gravity="center_vertical"
-    android:orientation="horizontal">
+                android:id="@+id/titleContainer"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/title_clickable"
@@ -20,8 +20,8 @@
             android:id="@+id/up_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow_with_paddings"
-            android:layout_gravity="center_vertical" />
+            android:src="@drawable/ic_up_arrow"
+            android:layout_gravity="center_vertical"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,14 +35,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:visibility="visible" />
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/subtitle"
                 style="@style/Widget.Topface.ActionBar.Subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="5dp"
             android:drawableRight="@drawable/ic_coins"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/likes_textview"
@@ -70,6 +70,6 @@
             android:layout_marginLeft="10dp"
             android:drawablePadding="5dp"
             android:drawableRight="@drawable/ic_sympathy_small"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
     </LinearLayout>
 </RelativeLayout>
