--- a/src/main/res/layout/dating_buttons.xml
+++ b/src/main/res/layout/dating_buttons.xml
@@ -23,8 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
-        android:background="@android:color/transparent"
-       >
+        android:background="@android:color/transparent">
 
         <Button
             android:id="@+id/btnDatingAdmiration"
@@ -41,14 +40,14 @@
             style="@style/DatingButtonsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btnDatingAdmiration"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="@dimen/coins_icon_margin_left"
             android:layout_toRightOf="@+id/btnDatingAdmiration"
             android:background="@android:color/transparent"
             android:drawablePadding="2dp"
             android:drawableRight="@drawable/coins"
-            android:layout_alignBottom="@+id/btnDatingAdmiration"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="-33dp"
             android:text="@integer/love_dating_button"
             android:textStyle="bold" />
 
