--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="popular_dialog_text_margin">36dp</dimen>
     <dimen name="action_bar_title_size">18sp</dimen>
 
+    <dimen name="coins_icon_margin_left">-33dp</dimen>
+
     <!-- defaults for shadows -->
     <item name="shadow_1px" format="float" type="dimen">1</item>
     <item name="shadow_n1px" format="float" type="dimen">-1</item>
