--- a/src/main/res/layout/dating_buttons.xml
+++ b/src/main/res/layout/dating_buttons.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:inAnimation="@android:anim/fade_in"
@@ -40,16 +41,14 @@
             style="@style/DatingButtonsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/btnDatingAdmiration"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="@dimen/coins_icon_margin_left"
-            android:layout_toRightOf="@+id/btnDatingAdmiration"
+            android:layout_centerInParent="true"
             android:background="@android:color/transparent"
             android:drawablePadding="2dp"
             android:drawableRight="@drawable/coins"
-            android:text="@integer/love_dating_button"
-            android:textStyle="bold" />
+            android:paddingLeft="28dp"
+            android:paddingTop="42dp"
+            android:textStyle="bold"
+            tools:text="@integer/love_dating_button" />
 
     </RelativeLayout>
 
