--- a/src/main/res/layout/dating_buttons.xml
+++ b/src/main/res/layout/dating_buttons.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:inAnimation="@android:anim/fade_in"
@@ -47,8 +46,8 @@
             android:drawableRight="@drawable/coins"
             android:paddingLeft="28dp"
             android:paddingTop="42dp"
-            android:textStyle="bold"
-            tools:text="@integer/love_dating_button" />
+            android:text="@integer/love_dating_button"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
