--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -34,8 +34,8 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="Widget.Topface.ActionBar.Subtitle" parent="Widget.Topface.ActionBar.Title">
-        <item name="android:textColor">#99FFFFFF</item>
+    <style name="Widget.Topface.ActionBar.Subtitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
+    <item name="android:textColor">#99FFFFFF</item>
         <item name="android:textSize">@dimen/action_bar_subtitle_size</item>
     </style>
 
