#33405: Открывать в переписке клавиатуру, если высота экрана больше 479dp

--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
 
     <dimen name="popular_dialog_text_margin">36dp</dimen>
 
+    <dimen name="min_screen_height_chat_fragment">479dp</dimen>
+
     <!-- defaults for shadows -->
     <item name="shadow_1px" format="float" type="dimen">1</item>
     <item name="shadow_n1px" format="float" type="dimen">-1</item>
