--- a/src/main/res/layout/chat_footer_send_holo.xml
+++ b/src/main/res/layout/chat_footer_send_holo.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_white"
-        android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/bg_white"
+    android:orientation="horizontal">
 
     <ImageButton
         android:id="@+id/send_gift_button"
@@ -11,25 +11,25 @@
         android:layout_height="46dp"
         android:layout_gravity="center_horizontal|bottom"
         android:background="@drawable/bg_solid_holo_selector"
-        android:src="@drawable/btn_send_gift_holo_selector"/>
+        android:src="@drawable/btn_send_gift_holo_selector" />
 
     <EditText
         android:id="@+id/edChatBox"
+        style="@style/topfaceEditText.Holo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:hint="@string/dating_message"
         android:imeOptions="actionSend"
         android:inputType="textCapSentences|textMultiLine"
         android:maxLines="5"
-        android:minHeight="34dp"
-        style="@style/topfaceEditText.Holo">
+        android:minHeight="34dp">
 
-        <requestFocus/>
+        <requestFocus />
     </EditText>
 
     <ImageButton
@@ -38,6 +38,6 @@
         android:layout_height="46dp"
         android:layout_gravity="center_horizontal|bottom"
         android:background="@drawable/bg_solid_holo_selector"
-        android:src="@drawable/btn_send_message_holo_selector"/>
+        android:src="@drawable/btn_send_message_holo_selector" />
 
 </LinearLayout>
