--- a/src/main/res/values-es/strings-profile.xml
+++ b/src/main/res/values-es/strings-profile.xml
@@ -227,8 +227,8 @@
     <string name="form_detail_about_dating_3">Describe tu cita ideal</string>
     <string name="form_detail_archievements_0">Los mejores logros en la vida</string>
     <string name="form_detail_archievements_1">Los mejores logros en la vida</string>
-    <string name="form_detail_archievements_2">Tus mejores losgros en la vida</string>
-    <string name="form_detail_archievements_3">Tus mejores losgros en la vida</string>
+    <string name="form_detail_archievements_2">Tus mejores logros en la vida</string>
+    <string name="form_detail_archievements_3">Tus mejores logros en la vida</string>
     <string name="form_main_about_status_0">Sobre él</string>
     <string name="form_main_about_status_1">Sobre ella</string>
     <string name="form_main_about_status_2">Sobre si mismo</string>
