#33563: Съехали вверх пункты главного меню

--- a/src/main/res/layout/item_left_menu_button_with_badge.xml
+++ b/src/main/res/layout/item_left_menu_button_with_badge.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/btnMenu"
         android:layout_toLeftOf="@+id/tvCounterBadge"
-        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
         style="@style/LeftMenuButtons"/>
 
     <TextView
