--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
 
     <dimen name="popular_dialog_text_margin">36dp</dimen>
 
+    <!--show keyboard in chat, when screen height more than this value-->
     <dimen name="min_screen_height_chat_fragment">479dp</dimen>
 
     <dimen name="action_bar_title_size">18sp</dimen>
