--- a/src/main/res/layout/layout_popular_user_blocker.xml
+++ b/src/main/res/layout/layout_popular_user_blocker.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="fill_parent">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:clickable="true">
 
     <ImageView
+        android:layout_marginTop="@dimen/popular_dialog_text_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_rocket" />
@@ -31,6 +36,7 @@
         android:layout_marginBottom="@dimen/popular_dialog_text_margin" />
 
     <Button
+        android:layout_marginBottom="@dimen/popular_dialog_text_margin"
         android:id="@+id/btnBuyVip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,3 +45,5 @@
         android:singleLine="true"
         android:minWidth="179dp" />
 </LinearLayout>
+
+</ScrollView>
