--- a/src/main/res/layout/layout_popular_user_blocker.xml
+++ b/src/main/res/layout/layout_popular_user_blocker.xml
@@ -4,45 +4,46 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+
     <LinearLayout
         android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:clickable="true">
-
-    <ImageView
-        android:layout_marginTop="@dimen/popular_dialog_text_margin"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_rocket" />
-
-    <TextView
-        android:id="@+id/popular_user_lock_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/ItemTitleText"
+        android:clickable="true"
         android:gravity="center"
-        android:textSize="18sp"
-        android:textColor="@color/text_color_gray"
-        android:lineSpacingExtra="4sp"
-        android:shadowColor="@null"
-        android:shadowRadius="0"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="@dimen/popular_dialog_text_margin"
-        android:layout_marginBottom="@dimen/popular_dialog_text_margin" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnBuyVip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/buying_vip_status"
-        style="@style/Widget.Topface.Button.Big.Blue"
-        android:singleLine="true"
-        android:minWidth="179dp"
-        android:layout_marginBottom="@dimen/popular_dialog_text_margin" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/popular_dialog_text_margin"
+            android:src="@drawable/icon_rocket" />
+
+        <TextView
+            android:id="@+id/popular_user_lock_text"
+            style="@style/ItemTitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/popular_dialog_text_margin"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="@dimen/popular_dialog_text_margin"
+            android:gravity="center"
+            android:lineSpacingExtra="4sp"
+            android:shadowColor="@null"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="0"
+            android:textColor="@color/text_color_gray"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnBuyVip"
+            style="@style/Widget.Topface.Button.Big.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/popular_dialog_text_margin"
+            android:minWidth="179dp"
+            android:singleLine="true"
+            android:text="@string/buying_vip_status" />
     </LinearLayout>
 </ScrollView>
