--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -2,9 +2,7 @@
 <com.topface.topface.ui.views.KeyboardListenerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chatContainer"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:layout_height="fill_parent">
 
     <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
         android:id="@+id/lvChatList"
@@ -12,7 +10,6 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/loChatFooterSend"
         android:cacheColorHint="#00000000"
-        android:clickable="true"
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp"
         android:fadeScrollbars="true"
