--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/loControlsGroup"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+              android:id="@+id/loControlsGroup"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical">
 
     <!-- button bar -->
-    <include layout="@layout/bar_double_big_button" />
+    <include layout="@layout/bar_double_big_button"/>
 
-    <include layout="@layout/leaders" />
+    <include layout="@layout/leaders"/>
 
     <RelativeLayout
         android:id="@+id/feedContainer"
@@ -26,31 +26,31 @@
             android:gravity="center"
             android:minWidth="150dp"
             android:paddingRight="25dp"
-            android:singleLine="true" />
+            android:maxLines="1"/>
 
         <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/lvFeedList"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:cacheColorHint="#00000000"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:fadeScrollbars="true"
-            android:fadingEdge="none"
-            p2r:ptrOverScroll="false"
-            p2r:ptrShowIndicator="false" />
+                                           android:id="@+id/lvFeedList"
+                                           android:layout_width="fill_parent"
+                                           android:layout_height="fill_parent"
+                                           android:cacheColorHint="#00000000"
+                                           android:divider="@android:color/transparent"
+                                           android:dividerHeight="0dp"
+                                           android:fadeScrollbars="true"
+                                           android:fadingEdge="none"
+                                           p2r:ptrOverScroll="false"
+                                           p2r:ptrShowIndicator="false"/>
 
         <com.topface.topface.ui.views.LockerView
             android:id="@+id/llvFeedLoading"
             style="@style/LoadingLocker"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_height="fill_parent"/>
 
         <ViewStub
             android:id="@+id/stubForEmptyFeed"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_height="fill_parent"/>
     </RelativeLayout>
 
-    <include layout="@layout/banner" />
+    <include layout="@layout/banner"/>
 </LinearLayout>
