--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     </style>
 
     <style name="Widget.Topface.ActionBar.Subtitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
-    <item name="android:textColor">#99FFFFFF</item>
+        <item name="android:textColor">#99FFFFFF</item>
         <item name="android:textSize">@dimen/action_bar_subtitle_size</item>
     </style>
 
@@ -825,5 +825,25 @@
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="TabIndicatorHoloStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="TabIndicatorHoloStyle.Title">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">70</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@color/tab_text_color</item>
+    </style>
+
+    <style name="TabIndicatorHoloStyle.Counter">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/tab_counter_color</item>
     </style>
 </resources>
