--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     </style>
 
     <style name="Widget.Topface.ActionBar.Subtitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
-    <item name="android:textColor">#99FFFFFF</item>
+        <item name="android:textColor">#99FFFFFF</item>
         <item name="android:textSize">@dimen/action_bar_subtitle_size</item>
     </style>
 
@@ -826,4 +826,17 @@
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="YouDoNotShowPopupTitle">
+        <item name="android:textColor">#FEFEFE</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="YouDoNotShowPopupMessage">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
