--- a/src/main/res/layout/dating_lock_popup.xml
+++ b/src/main/res/layout/dating_lock_popup.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:background="@drawable/bg_left_menu_item_selector">
 
     <ImageView
         android:id="@+id/iv_close"
+        android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_close_dating_lock_popup" />
 
@@ -19,7 +19,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="68dp"
         android:src="@drawable/ic_heart" />
 
@@ -28,33 +27,25 @@
         style="@style/YouDoNotShowPopupTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:layout_marginTop="28dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:text="@string/you_do_not_show_in_dating" />
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/message"
         style="@style/YouDoNotShowPopupMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"
-        android:text="@string/you_do_not_show_in_dating_popup_message" />
+        android:layout_marginRight="18dp" />
 
     <Button
         style="@style/Widget.Topface.Button.Big.Blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/message"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:minHeight="46dp"
         android:minWidth="198dp"
@@ -63,4 +54,4 @@
         android:text="@string/locking_popup_button_answer" />
 
 
-</RelativeLayout>
+</LinearLayout>
