Retriers on login screens.

--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    android:background="@drawable/auth_bg"
-    >
+    android:background="@drawable/auth_bg">
 
-    <RelativeLayout
+<RelativeLayout
         android:id="@+id/authContainer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-
         android:clickable="true">
 
         <ProgressBar
