--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -842,6 +842,12 @@
         <item name="android:textColor">@color/tab_text_color</item>
     </style>
 
+    <style name="TabIndicatorHoloStyle.Title.Dialogs">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:layout_weight">0</item>
+    </style>
+
     <style name="TabIndicatorHoloStyle.Counter">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">@color/tab_counter_color</item>
