--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -2,10 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="true"
-    android:background="@drawable/auth_bg">
+    android:background="@drawable/auth_bg"
+    android:fillViewport="true">
 
-<RelativeLayout
+    <RelativeLayout
         android:id="@+id/authContainer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -25,45 +25,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:animateLayoutChanges="true"
             android:gravity="center"
-            android:orientation="vertical"
-            android:animateLayoutChanges="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/ivAuthLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/auth_logo" />
 
             <Button
                 android:id="@+id/btnAuthFB"
+                style="@style/AuthButtonsText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/auth_fb_selector"
                 android:text="@string/auth_btn_fb"
-                style="@style/AuthButtonsText"
                 android:visibility="visible" />
 
             <Button
                 android:id="@+id/btnAuthVK"
+                style="@style/AuthButtonsText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/auth_vk_selector"
                 android:text="@string/auth_btn_vk"
-                style="@style/AuthButtonsText"
                 android:visibility="visible" />
 
             <Button
                 android:id="@+id/btnAuthOk"
+                style="@style/AuthButtonsText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/auth_ok_selector"
                 android:text="@string/auth_btn_ok"
-                style="@style/AuthButtonsText"
                 android:visibility="visible" />
 
             <RelativeLayout
@@ -74,21 +74,21 @@
                 android:background="@drawable/btn_sign_in_selector">
 
                 <TextView
+                    style="@style/AuthButtonsText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:drawableLeft="@drawable/ic_sign_in"
                     android:drawablePadding="8dp"
-                    style="@style/AuthButtonsText"
                     android:text="@string/sign_in" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp" />
+                    android:layout_marginRight="4dp"
+                    android:src="@drawable/ic_arrow" />
 
             </RelativeLayout>
 
@@ -99,21 +99,21 @@
                 android:background="@drawable/btn_create_account_selector">
 
                 <TextView
+                    style="@style/AuthButtonsText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:drawableLeft="@drawable/ic_create_account"
                     android:drawablePadding="8dp"
-                    style="@style/AuthButtonsText"
                     android:text="@string/create_account" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp" />
+                    android:layout_marginRight="4dp"
+                    android:src="@drawable/ic_arrow" />
 
             </RelativeLayout>
 
@@ -126,8 +126,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="10dp"
             android:visibility="gone">
 
@@ -135,25 +135,25 @@
                 android:id="@+id/fb_ico"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ico_facebook" />
+                android:src="@drawable/ico_facebook"
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/vk_ico"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ico_vk" />
+                android:src="@drawable/ico_vk"
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/ok_ico"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:visibility="gone"
-                android:src="@drawable/ico_ok" />
+                android:src="@drawable/ico_ok"
+                android:visibility="gone" />
 
             <TextView
                 android:layout_width="wrap_content"
