#33708: waiting result from server (#33707)

--- a/src/main/res/layout/fragment_edit_input.xml
+++ b/src/main/res/layout/fragment_edit_input.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center_horizontal"
-              android:orientation="vertical"
-              android:paddingTop="8dp">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingTop="8dp">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        style="@style/BackgroundFormTitleText"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/BackgroundFormTitleText"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/charactersCount"
+            style="@style/CharactersCount" />
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/edText"
@@ -27,7 +41,7 @@
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:singleLine="false"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
 
 </LinearLayout>
