--- a/src/main/res/layout/tab_indicator.xml
+++ b/src/main/res/layout/tab_indicator.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:orientation="horizontal"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:gravity="center"
     android:layout_height="wrap_content">
+
+    <!-- need this nesting for correct title/counter work -->
+    <!-- title must be ellipsized when total tab width is too small -->
+    <!-- counter must at right of title, and always visible -->
+    <!-- and both of them must be always in center, even when tab width is big -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tab_title"
@@ -16,4 +24,5 @@
     <TextView
         android:id="@+id/tab_counter"
         style="@style/TabIndicatorHoloStyle.Counter" />
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
