--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -25,8 +25,9 @@
 
     <color name="tab_counter_text_color_selected">#33B5E5</color>
     <color name="tab_counter_text_color_not_selected">#9933B5E5</color>
-    <color name="tab_text_color_selected">#FFFFFF</color>
-    <color name="tab_text_color_not_selected">#99FFFFFF</color>
-    <color name="tab_background">#303030</color>
+    <color name="tab_text_color_selected">#3D3D3D</color>
+    <color name="tab_text_color_not_selected">#993D3D3D</color>
+    <color name="tab_background">#ebebeb</color>
+    <color name="tab_divider_color">@color/tab_text_color_selected</color>
 
 </resources>
