--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -256,6 +256,18 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="AccountEditText" parent="ItemWhiteText">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/city_editbox_selector</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+    </style>
+
     <style name="DatingButtonsText" parent="ShadowDatingButtons">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">9sp</item>
