#33092: Убрано зеленое подчеркивание первой ячейки в фидах на 2.3

--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -38,7 +38,8 @@
             android:fadeScrollbars="true"
             android:fadingEdge="none"
             p2r:ptrOverScroll="false"
-            p2r:ptrShowIndicator="false" />
+            p2r:ptrShowIndicator="false"
+            android:listSelector="@android:color/transparent" />
 
         <com.topface.topface.ui.views.LockerView
             android:id="@+id/llvFeedLoading"
