--- a/src/main/res/layout/actionbar_checkbox.xml
+++ b/src/main/res/layout/actionbar_checkbox.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <CheckBox
         android:id="@+id/cbCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/navbar_checkbox" />
+        android:drawableLeft="@drawable/navbar_checkbox" />
 
     <TextView
         android:id="@+id/tvText"
