--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -74,7 +74,7 @@
     </style>
 
     <style name="topfaceCheckbox">
-        <item name="android:background">@drawable/checkbox_selector</item>
+        <item name="android:drawableLeft">@drawable/checkbox_selector</item>
 
     </style>
 
@@ -868,6 +868,24 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="FilterSpinner" parent="@android:style/Widget.DropDownItem.Spinner">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">28dp</item>
+        <item name="android:background">@drawable/input_field</item>
+        <item name="android:layout_marginRight">16dp</item>
+    </style>
+
+    <style name="FilterCheckBox" parent="topfaceCheckbox">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
