Signup screen ui bugs fix.

--- a/src/main/res/layout/fragment_create_account.xml
+++ b/src/main/res/layout/fragment_create_account.xml
@@ -181,6 +181,7 @@
             android:layout_marginBottom="8dp"/>
 
         <TextView
+            android:id="@+id/tvWelcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/AuthButtonsBigText"
