--- a/src/main/res/drawable/filter_light_edit_form_selector.xml
+++ b/src/main/res/drawable/filter_light_edit_form_selector.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#CCE8FC" android:state_focused="true" />
-    <item android:color="#FFFFFF" />
+    <item android:drawable="@color/form_selector_color_pressed_state" android:state_pressed="true" />
+    <item android:drawable="@color/form_selector_color_release_state" />
 </selector>
