--- a/src/main/res/layout/filter_light_edit_form.xml
+++ b/src/main/res/layout/filter_light_edit_form.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
+        android:tag="tvFilterTitle"
         android:textColor="#333333"
         android:textSize="15sp" />
 
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="14dp"
         android:paddingLeft="8dp"
+        android:tag="tvFilterText"
         android:textColor="#888888"
         android:textSize="14sp" />
 
