--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -91,4 +91,8 @@
         <attr name="grayButtonStyle" format="reference" />
     </declare-styleable>
 
+    <declare-styleable name="CustomSpinner">
+        <attr name="prefix" format="string" />
+    </declare-styleable>
+
 </resources>
