--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -29,4 +29,17 @@
     <color name="tab_text_color_not_selected">#99FFFFFF</color>
     <color name="tab_background">#303030</color>
 
+    <!--filter light edit form selector color-->
+    <color name="form_selector_color_release_state">#FFFFFF</color>
+    <color name="form_selector_color_pressed_state">#CCE8FC</color>
+
+    <!--filter light edit form dialog text selector color-->
+    <color name="edit_form_selector_text_color_release_state">#333333</color>
+    <color name="edit_form_selector_text_color_pressed_state">#FFFFFF</color>
+
+    <!--filter light edit form dialog background selector color-->
+    <color name="edit_form_selector_background_color_release_state">#FFFFFF</color>
+    <color name="edit_form_selector_background_color_pressed_state">#33B5E5</color>
+
+
 </resources>
