--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -872,10 +872,15 @@
 
     <style name="FilterSpinner" parent="@android:style/Widget.DropDownItem.Spinner">
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginTop">28dp</item>
-        <item name="android:background">@drawable/input_field</item>
+        <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
+        <item name="android:background">@drawable/input_field</item>
+    </style>
+
+    <style name="FilterSpinnerDropDownList" parent="android:Widget.ListView.DropDown">
+        <item name="android:divider">#e2e2e2</item>
+        <item name="android:dividerHeight">1dp</item>
     </style>
 
     <style name="FilterCheckBox" parent="topfaceCheckbox">
@@ -886,6 +891,12 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:drawableLeft">@drawable/filter_checkbox</item>
+    </style>
+
+    <style name="CenterJustifyDialogTitle" parent="@android:style/Theme.Dialog">
+        <item name="android:divider">#e2e2e2</item>
+        <item name="android:dividerHeight">1dp</item>
     </style>
 
 </resources>
