--- a/src/main/res/layout/fragment_menu.xml
+++ b/src/main/res/layout/fragment_menu.xml
@@ -4,8 +4,10 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ListView
+    android:layout_height="match_parent"
+    android:background="@color/bg_left_menu_not_clicked">
+
+<ListView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:id="@+id/lvMenu"
